# ccdsap

./: CMakeLists.txt
APRIL20B/: CARSELL.cpp  COVIDLQ.cpp  STRNO.cpp  UNITGCD.cpp
APRIL20B/test/: STRNO.txt  UNITGCD.txt
COOK117B/: LIFTME.cpp  _MATBREAK.cpp
COOK117B/test/: LIFTME.txt
COOK118B/: CHEFRECP.cpp  CHFIMPRS.cpp  _CROADS.cpp
COOK118B/test/: CHEFRECP.txt  CHFIMPRS.txt
COOK119B/: CACHEHIT.cpp  MAXMEX.cpp  PERCAPTA.cpp
COOK119B/test/: MAXMEX.txt  PERCAPTA.txt
JUNE20B/: CHFICRM.cpp  COVDSMPL.cpp  EOEO.cpp  EVENM.cpp  PRICECON.cpp  XYSTR.cpp  _COVDSMPL.cpp
JUNE20B/test/: COVDSMPL.txt  EOEO.txt
KM252020/: KM25P5B.cpp  QM25P5A.cpp
KM252020/test/: KM25P5B.txt  QM25P5A.txt
LTIME83B/: FFL.cpp  SHUFFLE.cpp  _DOTTIME.cpp  _MEXUM.cpp
LTIME83B/test/: DOTTIME.txt
LTIME84B/: LOSTWKND.cpp  TREDIFF.cpp  TREDIFF_solution2.cpp  WWALK.cpp
MAY20B/: CORUS.cpp  COVID19.cpp  TRPLSRT.cpp  TRPLSRT_solution2.cpp
MAY20B/test/: TRPLSRT.txt
codeforces/CR652DIV2/: A.cpp  B.cpp  C.cpp
codeforces/CR652DIV2/test/: c.txt
disjoint set union/: DISHOWN.cpp  GALACTIK.cpp  _GALACTIK.cpp  _JABO.cpp
disjoint set union/test/: DISHOWN.txt  GALACTIK.txt  JABO.txt
heaps/: 1306 Sequence Median.cpp  ANUMLA.cpp  CAPIMOVE.cpp  EXPEDI.cpp  IPCTRAIN.cpp  KSUBSUM.cpp  RMID2.cpp  RRATING.cpp  TSECJ05.cpp  WEIRDFN.cpp
heaps/test/: 1306 Sequence Median.txt  ANUMLA.txt  EXPEDI.txt  RMID2.txt  TSECJ05.txt  WEIRDFN.txt
practise/: CHEFSUM.cpp  CHOPRT.cpp  CIELRCPT.cpp  DWNLD.cpp  FCTRL.cpp  FLOW001.cpp  FLOW002.cpp  FLOW004.cpp  FLOW005.cpp  FLOW006.cpp  FLOW007.cpp  FLOW008.cpp  FLOW009.cpp  FLOW010.cpp  FLOW017.cpp  FLOW018.cpp  FRUITS.cpp  FSQRT.cpp  HS08TEST.cpp  INTEST.cpp  PPSUM.cpp  PRB01.cpp  TLG.cpp  TRISQ.cpp
practise/beginner/: ALEXTASK.cpp  ALTARAY.cpp  AMR15A.cpp  ANKTRAIN.cpp  CHEFKEY.cpp  CHEFROUT.cpp  CHEFSUM.cpp  CHN09.cpp  CHOPRT.cpp  CHRL2.cpp  CHRL2_solution2.cpp  CIELRCPT.cpp  COLOR.cpp  COMM3.cpp  DWNLD.cpp  ELEVSTRS.cpp  FCTRL.cpp  FLOW001.cpp  FLOW002.cpp  FLOW004.cpp  FLOW005.cpp  FLOW006.cpp  FLOW007.cpp  FLOW008.cpp  FLOW009.cpp  FLOW010.cpp  FLOW011.cpp  FLOW013.cpp  FLOW014.cpp  FLOW016.cpp  FLOW017.cpp  FLOW018.cpp  FRUITS.cpp  FSQRT.cpp  GCD2.cpp  GDOG.cpp  HEADBOB.cpp  HS08TEST.cpp  INTEST.cpp  KFIB.cpp  (+22 more)
practise/beginner/test/: ALEXTASK.txt  AMR15A.txt  ANKTRAIN.txt  CHEFKEY.txt  CHN09.txt  CHRL2.txt  COMM3.txt  ELEVSTRS.txt  FLOW009.txt  FLOW011.txt  FLOW014.txt  FLOW016.txt  GCD2.txt  HS08TEST.txt  LCH15JAB.txt  RAINBOWA.txt  RECTSQ.txt  TTENIS.txt  UTMOPR.txt  VCS.txt  XENTASK.txt
practise/easy/: AMSGAME1.cpp  APPROX.cpp  APPROX2.cpp  BRACKETS.cpp  BUYING2.cpp  C00K0FF.cpp  CARVANS.cpp  CHEFZOT.cpp  CIELAB.cpp  CK87MEDI.cpp  CLEANUP.cpp  CONFLIP.cpp  CSUB.cpp  DECSTR.cpp  DIVIDING.cpp  EASYPROB.cpp  ERROR.cpp  HORSES.cpp  JOHNY.cpp  LEBOMBS.cpp  LECANDY.cpp  LEPERMUT.cpp  LTM40AB.cpp  MARCHA1.cpp  MATPAN.cpp  MAXDIFF.cpp  NAME2.cpp  NAME2_solution2.cpp  NOCODING.cpp  NUKES.cpp  NUMGAME2.cpp  OJUMPS.cpp  POTATOES.cpp  PRIME1.cpp  RESQ.cpp  RIGHTRI.cpp  ROWCOLOP.cpp  RRCOPY.cpp  RRECIPE.cpp  RRSUM.cpp  (+8 more)
practise/easy/test/: APPROX.txt  APPROX2.txt  BRACKETS.txt  C00K0FF.txt  CHEFZOT.txt  DECSTR.txt  DIVIDING.txt  JOHNY.txt  LEPERMUT.txt  LTM40AB.txt  MATPAN.txt  NAME2.txt  NUKES.txt  OJUMPS.txt  POTATOES.txt  RRECIPE.txt  SMPAIR.txt  SMRSTR.txt  SPCANDY.txt  SUBANAGR.txt  SUBGCD.txt
practise/medium/: SEAVOTE.cpp  SECMSG.cpp
practise/medium/test/: SEAVOTE.txt  SECMSG.txt
practise/others/: GTS01.cpp  ICPC16A.cpp
practise/red/: ICPC16A.cpp
practise/school/: CHEFAPAR.cpp  CHEFSTLT.cpp  COPS.cpp  FCTRL2.cpp  LONGSEQ.cpp  LUCKFOUR.cpp  MOVIEWKN.cpp  PERFCONT.cpp  SUBINC.cpp  TWONMS.cpp  WDTBAM.cpp
practise/school/test/: FCTRL2.txt  LONGSEQ.txt  MOVIEWKN.txt
practise/test/: FLOW004.txt  FLOW005.txt  FLOW006.txt  FLOW007.txt  FLOW008.txt  FLOW010.txt  FLOW017.txt  FLOW018.txt  FSQRT.txt
practise/unsolved_first_attempt/: CHEFSHIP.cpp  MATBREAK.cpp  TREDIFF.cpp  TRPLSRT.cpp
practise/unsolved_first_attempt/test/: CHEFSHIP.txt  TRPLSRT.txt
