cmake_minimum_required(VERSION 3.15)
project(ccdsap)

set(CMAKE_CXX_STANDARD 14)
include_directories(/usr/local/include)

#[[
add_executable(main main.cpp)
add_executable(IPCTRAIN heaps/IPCTRAIN.cpp)
add_executable(ANUMLA heaps/ANUMLA.cpp)
add_executable(KSUBSUM heaps/KSUBSUM.cpp)
add_executable(RRATING heaps/RRATING.cpp)
add_executable(TSECJ05 heaps/TSECJ05.cpp)
add_executable(WEIRDFN heaps/WEIRDFN.cpp)
add_executable(CAPIMOVE heaps/CAPIMOVE.cpp)
add_executable(RMID2 heaps/RMID2.cpp)
add_executable(EXPEDI heaps/EXPEDI.cpp)
add_executable(1306_Sequence_Median "heaps/1306 Sequence Median.cpp")
add_executable(COVIDLQ APRIL20B/COVIDLQ.cpp)
add_executable(CARSELL APRIL20B/CARSELL.cpp)
add_executable(STRNO APRIL20B/STRNO.cpp)
add_executable(UNITGCD APRIL20B/UNITGCD.cpp)
add_executable(GALACTIK "disjoint set union/_GALACTIK.cpp")
add_executable(DISHOWN "disjoint set union/DISHOWN.cpp")
add_executable(JABO "disjoint set union/_JABO.cpp")
add_executable(LIFTME COOK117B/LIFTME.cpp)
add_executable(MATBREAK COOK117B/_MATBREAK.cpp)

# Practise problems
add_executable(1_START01 practise/biginner/START01.cpp)
add_executable(2_TRISQ practise/biginner/TRISQ.cpp)
add_executable(3_HS08TEST practise/biginner/HS08TEST.cpp)
add_executable(4_INTEST practise/biginner/INTEST.cpp)
add_executable(5_FCTRL practise/biginner/FCTRL.cpp)
add_executable(6_FLOW001 practise/biginner/FLOW001.cpp)
add_executable(7_FLOW002 practise/biginner/FLOW002.cpp)
add_executable(8_FLOW006 practise/biginner/FLOW006.cpp)
add_executable(9_FLOW008 practise/biginner/FLOW008.cpp)
add_executable(10_FLOW009 practise/biginner/FLOW009.cpp)
add_executable(11_FLOW005 practise/biginner/FLOW005.cpp)
add_executable(12_TLG practise/biginner/TLG.cpp)
add_executable(13_FSQRT practise/biginner/FSQRT.cpp)
add_executable(14_CHOPRT practise/biginner/CHOPRT.cpp)
add_executable(15_DWNLD practise/biginner/DWNLD.cpp)
add_executable(16_CIELRCPT practise/biginner/CIELRCPT.cpp)
add_executable(17_FLOW017 practise/biginner/FLOW017.cpp)
add_executable(18_FLOW004 practise/biginner/FLOW004.cpp)
add_executable(19_FLOW018 practise/biginner/FLOW018.cpp)
add_executable(20_FLOW007 practise/biginner/FLOW007.cpp)
]]
add_executable(21_FRUITS practise/beginner/FRUITS.cpp)
add_executable(22_PPSUM practise/beginner/PPSUM.cpp)
add_executable(23_PRB01 practise/beginner/PRB01.cpp)
add_executable(24_FLOW010 practise/beginner/FLOW010.cpp)
add_executable(25_CHEFSUM practise/beginner/CHEFSUM.cpp)
add_executable(26_LUCKFOUR practise/school/LUCKFOUR.cpp)