cmake_minimum_required(VERSION 3.15)
project(ccdsap)

set(CMAKE_CXX_STANDARD 14)
include_directories(/usr/local/include)

#[[
add_executable(main main.cpp)
add_executable(IPCTRAIN heaps/IPCTRAIN.cpp)
add_executable(ANUMLA heaps/ANUMLA.cpp)
add_executable(KSUBSUM heaps/KSUBSUM.cpp)
add_executable(RRATING heaps/RRATING.cpp)
add_executable(TSECJ05 heaps/TSECJ05.cpp)
add_executable(WEIRDFN heaps/WEIRDFN.cpp)
add_executable(CAPIMOVE heaps/CAPIMOVE.cpp)
add_executable(RMID2 heaps/RMID2.cpp)
add_executable(EXPEDI heaps/EXPEDI.cpp)
add_executable(1306_Sequence_Median "heaps/1306 Sequence Median.cpp")
add_executable(COVIDLQ APRIL20B/COVIDLQ.cpp)
add_executable(CARSELL APRIL20B/CARSELL.cpp)
add_executable(STRNO APRIL20B/STRNO.cpp)
add_executable(UNITGCD APRIL20B/UNITGCD.cpp)
add_executable(GALACTIK "disjoint set union/_GALACTIK.cpp")
add_executable(DISHOWN "disjoint set union/DISHOWN.cpp")
add_executable(JABO "disjoint set union/_JABO.cpp")
add_executable(LIFTME COOK117B/LIFTME.cpp)
add_executable(MATBREAK COOK117B/_MATBREAK.cpp)

#April Lunch Time
add_executable(FFL LTIME83B/FFL.cpp)
add_executable(SHUFFLE LTIME83B/SHUFFLE.cpp)
add_executable(MEXUM LTIME83B/MEXUM.cpp)
add_executable(DOTTIME LTIME83B/DOTTIME.cpp)

# May Lunch Time
add_executable(COVID19 MAY20B/COVID19.cpp)
add_executable(CORUS MAY20B/CORUS.cpp)
add_executable(TRPLSRT_solution1 MAY20B/TRPLSRT.cpp)
add_executable(TRPLSRT_solution2 MAY20B/TRPLSRT_solution2.cpp)

# COOK118
add_executable(CHEFRECP COOK118B/CHEFRECP.cpp)
add_executable(CHFIMPRS COOK118B/CHFIMPRS.cpp)
add_executable(CROADS COOK118B/_CROADS.cpp)

# KM252020 ketek[i] Match 25.5
add_executable(QM25P5A KM252020/QM25P5A.cpp)
add_executable(KM25P5B KM252020/KM25P5B.cpp)

# May Lunchtime
add_executable(LOSTWKND LTIME84B/LOSTWKND.cpp)
add_executable(WWALK LTIME84B/WWALK.cpp)
add_executable(_TREDIFF LTIME84B/TREDIFF.cpp)
add_executable(TREDIFF_solution2 LTIME84B/TREDIFF_solution2.cpp)

# JUNE20B
add_executable(PRICECON JUNE20B/PRICECON.cpp)
add_executable(XYSTR JUNE20B/XYSTR.cpp)
add_executable(CHFICRM JUNE20B/CHFICRM.cpp)
add_executable(EOEO JUNE20B/EOEO.cpp)
add_executable(EVENM JUNE20B/EVENM.cpp)
add_executable(COVDSMPL JUNE20B/_COVDSMPL.cpp)

# Practise problems
add_executable(1_START01 practise/biginner/START01.cpp)
add_executable(2_TRISQ practise/biginner/TRISQ.cpp)
add_executable(3_HS08TEST practise/biginner/HS08TEST.cpp)
add_executable(4_INTEST practise/biginner/INTEST.cpp)
add_executable(5_FCTRL practise/biginner/FCTRL.cpp)
add_executable(6_FLOW001 practise/biginner/FLOW001.cpp)
add_executable(7_FLOW002 practise/biginner/FLOW002.cpp)
add_executable(8_FLOW006 practise/biginner/FLOW006.cpp)
add_executable(9_FLOW008 practise/biginner/FLOW008.cpp)
add_executable(10_FLOW009 practise/biginner/FLOW009.cpp)
add_executable(11_FLOW005 practise/biginner/FLOW005.cpp)
add_executable(12_TLG practise/biginner/TLG.cpp)
add_executable(13_FSQRT practise/biginner/FSQRT.cpp)
add_executable(14_CHOPRT practise/biginner/CHOPRT.cpp)
add_executable(15_DWNLD practise/biginner/DWNLD.cpp)
add_executable(16_CIELRCPT practise/biginner/CIELRCPT.cpp)
add_executable(17_FLOW017 practise/biginner/FLOW017.cpp)
add_executable(18_FLOW004 practise/biginner/FLOW004.cpp)
add_executable(19_FLOW018 practise/biginner/FLOW018.cpp)
add_executable(20_FLOW007 practise/biginner/FLOW007.cpp)
add_executable(21_FRUITS practise/beginner/FRUITS.cpp)
add_executable(22_PPSUM practise/beginner/PPSUM.cpp)
add_executable(23_PRB01 practise/beginner/PRB01.cpp)
add_executable(24_FLOW010 practise/beginner/FLOW010.cpp)
add_executable(25_CHEFSUM practise/beginner/CHEFSUM.cpp)
add_executable(26_LUCKFOUR practise/school/LUCKFOUR.cpp)
add_executable(27_MOVIEWKN practise/school/MOVIEWKN.cpp)
add_executable(28_ICPC16A practise/others/ICPC16A.cpp)
add_executable(29_FLOW013 practise/beginner/FLOW013.cpp)
add_executable(30_FLOW014 practise/beginner/FLOW014.cpp)
add_executable(31_TICKETS5 practise/beginner/TICKETS5.cpp)
add_executable(32_ELEVSTRS practise/beginner/ELEVSTRS.cpp)
add_executable(33_CHEFSTLT practise/school/CHEFSTLT.cpp)
add_executable(34_PALL01 practise/beginner/PALL01.cpp)
add_executable(35_WDTBAM practise/school/WDTBAM.cpp)
add_executable(36_TWONMS practise/school/TWONMS.cpp)
add_executable(37_PERFCONT practise/school/PERFCONT.cpp)
add_executable(38_FCTRL2 practise/school/FCTRL2.cpp) # Important
add_executable(39_LONGSEQ practise/school/LONGSEQ.cpp)
add_executable(40_CHEFAPAR practise/school/CHEFAPAR.cpp)
add_executable(41_JOHNY practise/easy/JOHNY.cpp)
add_executable(42_CIELAB practise/easy/CIELAB.cpp)
add_executable(43_HORSES practise/easy/HORSES.cpp)
add_executable(44_C00K0FF practise/easy/C00K0FF.cpp)
add_executable(45_CK87MEDI practise/easy/CK87MEDI.cpp)
add_executable(46_MATPAN practise/easy/MATPAN.cpp)
add_executable(47_LECANDY practise/easy/LECANDY.cpp)
add_executable(48_BRACKETS practise/easy/BRACKETS.cpp)
add_executable(49_CHN09 practise/beginner/CHN09.cpp)
add_executable(50_LAPIN practise/beginner/LAPIN.cpp)
add_executable(51_CONFLIP practise/easy/CONFLIP.cpp)
add_executable(52_COPS practise/school/COPS.cpp)
add_executable(53_CHEFROUT practise/beginner/CHEFROUT.cpp)
add_executable(54_XENTASK practise/beginner/XENTASK.cpp)
add_executable(55_VCS practise/beginner/VCS.cpp)
add_executable(56_AMR15A practise/beginner/AMR15A.cpp)
add_executable(57_GCD2 practise/beginner/GCD2.cpp) # Important
add_executable(58_DECSTR practise/easy/DECSTR.cpp)
add_executable(59_AMSGAME1 practise/easy/AMSGAME1.cpp) # Important
add_executable(60_CSUB practise/easy/CSUB.cpp)
add_executable(61_SUBGCD practise/easy/SUBGCD.cpp) # Important
add_executable(62_ROWCOLOP practise/easy/ROWCOLOP.cpp) # Important
add_executable(63_VOTERS practise/easy/VOTERS.cpp)
add_executable(64_ERROR practise/easy/ERROR.cpp)
add_executable(65_NAME2 practise/easy/NAME2.cpp)
add_executable(65_NAME2_solution2 practise/easy/NAME2_solution2.cpp)
add_executable(66_MAXDIFF practise/easy/MAXDIFF.cpp)
add_executable(67_RRECIPE practise/easy/RRECIPE.cpp)
add_executable(68_CHEFZOT practise/easy/CHEFZOT.cpp)
add_executable(69_NUKES practise/easy/NUKES.cpp)
add_executable(70_STONES practise/easy/STONES.cpp)
add_executable(71_CLEANUP practise/easy/CLEANUP.cpp)
add_executable(72_MARCHA1 practise/easy/MARCHA1.cpp)
add_executable(73_CARVANS practise/easy/CARVANS.cpp)
add_executable(74_LEPERMUT practise/easy/LEPERMUT.cpp)
add_executable(75_DIVIDING practise/easy/DIVIDING.cpp)
add_executable(76_SUBANAGR practise/easy/SUBANAGR.cpp)
add_executable(77_POTATOES practise/easy/POTATOES.cpp)
add_executable(78_RIGHTRI practise/easy/RIGHTRI.cpp)
add_executable(79_SMPAIR practise/easy/SMPAIR.cpp)
add_executable(80_SMRSTR practise/easy/SMRSTR.cpp)
add_executable(81_LTM40AB practise/easy/LTM40AB.cpp)
add_executable(82_SUBINC practise/school/SUBINC.cpp)
add_executable(83_KFIB practise/beginner/KFIB.cpp)
add_executable(84_ALTARAY practise/beginner/ALTARAY.cpp)
add_executable(85_APPROX practise/easy/APPROX.cpp)
add_executable(86_RESQ practise/easy/RESQ.cpp)
add_executable(87_RRSUM practise/easy/RRSUM.cpp)
add_executable(88_TWTCLOSE practise/beginner/TWTCLOSE.cpp)
add_executable(89_SEAVOTE practise/medium/SEAVOTE.cpp)
add_executable(90_FLOW016 practise/beginner/FLOW016.cpp)
add_executable(91_SEBIHWY practise/beginner/SEBIHWY.cpp)
add_executable(92_SNAKPROC practise/beginner/SNAKPROC.cpp)
add_executable(93_ALEXTASK practise/beginner/ALEXTASK.cpp)
add_executable(94_FLOW011 practise/beginner/FLOW011.cpp)
add_executable(95_TWOSTR practise/beginner/TWOSTR.cpp)
add_executable(96_HEADBOB practise/beginner/HEADBOB.cpp)
add_executable(97_COMM3 practise/beginner/COMM3.cpp)
add_executable(98_UTMOPR practise/beginner/UTMOPR.cpp)
add_executable(99_LCH15JAB practise/beginner/LCH15JAB.cpp)
add_executable(100_TTENIS practise/beginner/TTENIS.cpp)
add_executable(101_RECIPE practise/beginner/RECIPE.cpp)
add_executable(102_GDOG practise/beginner/GDOG.cpp)
add_executable(103_TRICOIN practise/beginner/TRICOIN.cpp)
add_executable(104_RECTSQ practise/beginner/RECTSQ.cpp)
add_executable(105_ANKTRAIN practise/beginner/ANKTRAIN.cpp)
add_executable(106_KTTABLE practise/beginner/KTTABLE.cpp)
add_executable(107_COLOR practise/beginner/COLOR.cpp)
add_executable(108_CHEFKEY practise/beginner/CHEFKEY.cpp)
]]

add_executable(109_CHRL2 practise/beginner/CHRL2.cpp)
add_executable(109_CHRL2_solution2 practise/beginner/CHRL2_solution2.cpp)
add_executable(110_RAINBOWA practise/beginner/RAINBOWA.cpp)
add_executable(111_APPROX2 practise/easy/APPROX2.cpp)
add_executable(112_NOCODING practise/easy/NOCODING.cpp)
add_executable(113_TRPLSRT practise/unsolved_first_attempt/TRPLSRT.cpp)
add_executable(114_TREDIFF practise/unsolved_first_attempt/TREDIFF.cpp)
add_executable(115_PRIME1 practise/easy/PRIME1.cpp)
add_executable(116_BUYING2 practise/easy/BUYING2.cpp)
add_executable(117_EASYPROB practise/easy/EASYPROB.cpp)